--- a/css/lrt.css
+++ b/css/lrt.css
@@ -9,6 +9,67 @@
     /* padding-bottom: 200px; */
 }
 
+/* Progress Bar */
+
+ul.progress-bar {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    text-align: justify;
+}
+
+ul.progress-bar> :first-child {
+    text-align: left;
+    border-radius: 5px 0px 0px 5px;
+    border-right: 1px dotted #49a564;
+}
+
+ul.progress-bar> :last-child {
+    text-align: right;
+    border-radius: 0px 5px 5px 0px;
+    border-left: 1px dotted #49a564;
+}
+
+li.progress-stage{
+    display:inline-block;
+    width: 20%;
+    font-weight: bold;
+    color: #006546;
+    background-color: white;
+    border: 1px dotted #006546;
+    padding: 0px 16px 0px 16px;
+    text-decoration: none;
+    text-align: center;
+}
+
+li.progress-stage-active{
+    background-color: #006546;
+    color: white;
+    border: 1px solid #006546;
+    border-left: 1px dotted #49a564;
+    border-right: 1px dotted #49a564;
+}
+
+.progress {
+    position: relative;
+    display: flex;
+}
+
+/* Check Lists */
+
+.checklist {
+    list-style-type:none;
+}
+
+.need-check{
+    margin: 10px;
+}
+
+li.checked-item{
+    text-decoration:line-through;  
+    color: #cccccc; 
+}
 
 /* Accordion Changes  */
 
