--- a/css/walkthrough.css
+++ b/css/walkthrough.css
@@ -18,7 +18,6 @@
     padding-top: 40px;
 }
 
-
 /* Accordion Changes  */
 
 .accordion-item{
@@ -93,6 +92,14 @@ h1, h2, h3, h4, h5, h6 {
     font-size: 1.2rem;
     line-height: 3.4rem;
     font-weight: 800;
+}
+
+.btn-start {
+    width: 400px;
+    height: 150px;
+    font-size: 3rem;
+    align-items: center;
+    line-height: 140px;
 }
 
 a {
