--- a/css/walkthrough.css
+++ b/css/walkthrough.css
@@ -123,3 +123,25 @@ a.visited, a:visited {
 #pdf-canvas {
     width: 100%;
 }
+
+/* responsive videos */
+
+.video-container {
+    overflow: hidden;
+    position: relative;
+    width:100%;
+}
+
+.video-container::after {
+    padding-top: 56.25%;
+    display: block;
+    content: '';
+}
+
+.video-container iframe {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+}
