--- a/css/stepper.css
+++ b/css/stepper.css
@@ -136,9 +136,9 @@
     margin-right: 2rem;
     cursor: pointer;
     border: none;
-    border: 0.2rem solid #bbb;
+    /*border: 0.2rem solid #bbb;
     box-shadow: 0 0.1rem 0.4rem 0 #bbb;
-    border-radius: 0.2rem;
+    border-radius: 0.2rem;*/
     background-color: white;
 }
 
