--- a/css/lrt.css
+++ b/css/lrt.css
@@ -163,3 +163,7 @@ a.visited,
 a:visited {
     color: #4c2c92;
 }
+
+.mdl-step__actions button:last-child:not(:first-child){
+    color: #F7BE00 !important;
+}
