--- a/css/walkthrough.css
+++ b/css/walkthrough.css
@@ -12512,8 +12512,8 @@ ul.entity-moderation-form #edit-current label:after {
 }
 .farmers-landing-page .primary-region .primary-region__header p,
 .temp-ag-workers .primary-region .primary-region__header p {
-    font-size: 2.2rem;
-    line-height: 3.4rem;
+    font-size: 1.8rem;
+    line-height: 2.8rem;
     font-weight: 300;
 }
 @media screen and (max-width: 811px) {
@@ -16455,7 +16455,8 @@ p.grey-1 {
     padding: 2rem;
 }
 ul {
-    margin-top: 0;
+    margin-top: 0.5rem;
+    margin-left: 2.0rem;
 }
 hr {
     margin-top: 2.5rem;
