--- a/css/walkthrough.css
+++ b/css/walkthrough.css
@@ -95,23 +95,27 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-start {
+    text-decoration: none; 
     text-align: center;
-    line-height: 6rem;
     text-transform: uppercase;
     color: #FFFFFF;
     font-family: "Public Sans";
     font-size: 3rem;
     font-weight: bold;
-    height: 6rem;
-    width: 30rem;
+    height: 4.55rem;
+    width: 24rem;
     cursor: pointer;
     background-color: #1a6ad3;
     border-color: #1a6ad3;
     border-radius: 4px;
-    shadow: 0,1,4,0 #BBBBBB;
 }
 
 .btn-start:hover {
+    text-decoration: none;
+    text-shadow: 0,0,0;
+    -webkit-text-stroke: none;
+    color: #FFFFFF;
+    background-color: #1a6ad3;
 }
 
 .btn-start:visited  {
@@ -119,7 +123,10 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .btn-start:active {
-
+    text-decoration: none;
+    text-shadow: 0,0,0;
+    -webkit-text-stroke: none;
+    background-color: #1a6ad3;
 }
 
 a {
