Converting pages to components
Reworking so that all contents loads from a single index.html
Optimizes switching pages and simplifies logic

--- a/components/footer.html
+++ b/components/footer.html
@@ -1,5 +1,4 @@
-function addFooter() {
-    return `        <div class="footer-primary-section" >
+<div class="footer-primary-section">
     <div class="container">
         <div class="row">
             <div class="medium-12">
@@ -120,5 +119,4 @@ function addFooter() {
             </div>  
         </div>
     </div>
-</div>`;
-}
+</div>
