--- a/components/header.html
+++ b/components/header.html
@@ -1,5 +1,4 @@
-function addHeader() {
-    return `<div class="head-main">
+<div class="head-main">
     <a href="#main-content" class="skip-nav" role="navigation" aria-label="Skip to Main Content">            Skip to main content        </a>
     <!--Skip to Main Content-->
     <div class="usa-banner" id="usa-gov-web-banner">
@@ -79,21 +78,21 @@ function addHeader() {
                     <ul class="tb-megamenu-nav nav level-0 items-6">
                         <li class="tb-megamenu-item level-1 mega active active-trail" data-id="menu_link_content:home" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Home"
                             aria-level="1">
-                            <a href="/" class="active-trail page-link mm-active" data-label="/" aria-label="Go to Home Page" data-category="Home">
+                            <a href="/" onclick="SetContent('home');return false;" class="active-trail page-link mm-active" data-label="/" aria-label="Go to Home Page" data-category="Home">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Home</div>
                                 </div>
                             </a>
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a href="/guides.html" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">
+                            <a href="/" onclick="SetContent('guides');return false;" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Guides</div>
                                 </div>
                             </a>
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                            <a href="/" onclick="SetContent('assessment');return false;" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Eligibility Self-Assessment</div>
                                 </div>
@@ -108,7 +107,7 @@ function addHeader() {
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:walkthrough" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Walkthrough"
                             aria-level="1">
-                            <a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
+                            <a href="/" onclick="SetContent('support');return false;" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Form Support</div>
                                 </div>
@@ -164,10 +163,10 @@ function addHeader() {
                     </div>
                     <div class="mm-top-section">
                         <a class="mm-mobile-top-nav home" href="/">Home</a>                               
-                        <a class="mm-mobile-top-nav home" href="/guides.html">Guides</a>
+                        <a class="mm-mobile-top-nav home" href="/index.html?guides">Guides</a>
                         <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
                         <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
-                        <a class="mm-mobile-top-nav home" href="/workthrough.html">Form Support</a>
+                        <a class="mm-mobile-top-nav home" href="/index.html?walkthrough">Form Support</a>
                     </div>
                 </div>
                 <div class="mm-utility-nav">
@@ -198,5 +197,4 @@ function addHeader() {
             <br>
         </a>
     </div>
-</div>`;
-}
+</div>
