--- a/components/support.html
+++ b/components/support.html
@@ -98,7 +98,7 @@
                                         </div> 
                                         <div class="loantype-card-button-container">
                                             <div class="loantype-card-button">
-                                                <button class="btn lg-btn" onclick="setFormView('${type["type"]}')" aria-label="Go to the ${type["type"]}" data-category="${type["type"]}"> ACCESS FORMS </button>
+                                                <button class="btn lg-btn" onclick="setFormView('${type["type"]}')" aria-label="Go to the ${type["type"]}" data-category="${type["type"]}" id="${type["type"]}"> ACCESS FORMS </button>
                                             </div>
                                         </div>
                                     </div>
@@ -111,7 +111,8 @@
     })();
 
     function setFormView(loanType) {
-        setCookie('currentLoanType', loanType, 1);
+        // Save seleted loan type cookie
+        setloanType(loanType);
 
         // Show Forms Grid with forms for specific loan type
         $.getJSON("/forms/forms.json", function(data) {
@@ -120,13 +121,11 @@
             // Get the loan name
             var loanName = data['LoanType'][index]['name'];
 
-            const form_ids = "";
-
             // Title of support page
             var titleText = `<div class="col">
                                 <div class="loantype-title">    
                                     <div class="">
-                                        <a href="" onclick="SetContent('support');return false;" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
+                                        <a href="" onclick="setContent('support');return false;" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
                                             <img class="loantype-title-back image-flip" src="./images/arrow-right.png" alt="Back arrow" width="32">
                                         </a>
                                     </div>
@@ -135,8 +134,6 @@
                                     </div>
                                 </div>
                             </div>`;
-            
-            // Apply Header
             document.getElementById('title-holder').innerHTML = titleText;
             
             // Description of support page
@@ -145,6 +142,7 @@
             
             // The cards for the individual forms
             var cards = [];
+            var formIds = [];
             $.each(data["Forms"], function(key, form) {
                 // use index to get the list of forms for the loan type
                 // if not in the loan's form list reeturn without building card
@@ -153,33 +151,37 @@
                 var new_card =  `<div class="col">
                                     <div class="content-card accent-top form-card h-100"">
                                         <div class="headline">
-                                            <h3><a class="text-link" href="/form.html?key=${key}&show_forms=${form_ids}">${form.name}</a></h3>
+                                            <h3> 
+                                                <a href="" onclick="loadForm('${form.id}');return false;" "class="text-link" id="${form.id}">
+                                                    ${form.name} 
+                                                </a>
+                                            </h3>
                                         </div>
                                         <div class="content">
                                             <p> ${form["description"]} </p>
                                         </div>
                                         <div class="link">
-                                            <a class="text-link" href="/form.html?key=${key}&show_forms=${form_ids}">Get assistance completing this form</a>
+                                            <a class="text-link" href="/form.html?key=${form.id}&show_forms=">Get assistance completing this form</a>
                                             <a class="text-link" href="/forms/${form["file_name"]}" download>Download</a>
                                         </div>
                                     </div>
                                 </div>`;
                 
                 cards.push(new_card);
+                formIds.push(form.id);
             });
 
             $("#forms-holder").empty();
             $("#forms-holder").append(cards.join(""));
 
-            $('#return-form-suport').html(`<a href="" onclick="SetContent('support');return false;"  class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">Back to all loan types</a>`);
+            $('#return-form-suport').html(`<a href="" onclick="setContent('support');return false;"  class="page-link" data-label="" aria-label="Go to Form Support Page" data-category="Loans">Back to all loan types</a>`);
+
         });
     }
 
-    // After DOM is loaded
-    $(document).ready(function () {
-        // Hide info if Eligibility Self-Assessment has been completed
-        if(userState() != 2) {
-            document.getElementById('info-container-id').style.display = 'grid';  
-        }
-    });
+    function loadForm(formType) {
+        setContent('form');
+        setFormType(formType);
+    }
+
 </script>
