--- a/components/guides.html
+++ b/components/guides.html
@@ -66,6 +66,7 @@
 
 <script>
     (function() {
+        setCurrentPage('guides');
 
         // Show Guide List
         $.getJSON("/guides/guides.json", function(data) {
