--- a/components/header.html
+++ b/components/header.html
@@ -78,28 +78,28 @@
                     <ul class="tb-megamenu-nav nav level-0 items-6">
                         <li class="tb-megamenu-item level-1 mega active active-trail" data-id="menu_link_content:home" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Home"
                             aria-level="1">
-                            <a href="/" onclick="setContent('home');return false;" class="active-trail page-link mm-active" data-label="/" aria-label="Go to Home Page" data-category="Home">
+                            <a href="/" id="home" onclick="setContent('home');return false;" class="active-trail page-link mm-active" data-label="/" aria-label="Go to Home Page" data-category="Home">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Home</div>
                                 </div>
                             </a>
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a href="/" onclick="setContent('guides');return false;" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">
+                            <a href="/" id="guides" onclick="setContent('guides');return false;" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Guides</div>
                                 </div>
                             </a>
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a href="/" onclick="setContent('assessment');return false;" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
+                            <a href="/" id="eligibility" onclick="setContent('eligibility');return false;" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Eligibility Self-Assessment</div>
                                 </div>
                             </a>
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:guides" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Guides" aria-level="1">
-                            <a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">
+                            <a href="/" id="discovery" onclick="setContent('discovery');return false;" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Loan Discovery</div>
                                 </div>
@@ -107,7 +107,7 @@
                         </li>
                         <li class="tb-megamenu-item level-1 mega" data-id="menu_link_content:walkthrough" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Walkthrough"
                             aria-level="1">
-                            <a href="/" onclick="setContent('support');return false;" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
+                            <a href="/" id="support" onclick="setContent('support');return false;" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Form Support</div>
                                 </div>
