--- a/components/header.html
+++ b/components/header.html
@@ -78,7 +78,7 @@
                     <ul class="tb-megamenu-nav nav level-0 items-6">
                         <li class="tb-megamenu-item level-1 mega active active-trail" data-id="menu_link_content:home" data-level="1" data-type="menu_item" data-class="" data-xicon="" data-caption="" data-alignsub="" data-group="0" data-hidewcol="0" data-hidesub="0" data-label="Home"
                             aria-level="1">
-                            <a href="/" id="home" onclick="setContent('home');return false;" class="active-trail page-link mm-active" data-label="/" aria-label="Go to Home Page" data-category="Home">
+                            <a href="/" id="home" onclick="setContent('home');return false;" class="page-link" data-label="/" aria-label="Go to Home Page" data-category="Home">
                                 <div class="mm-nav-link">
                                     <div class="mm-top-level-title">Home</div>
                                 </div>
