Quiz redraw issue
Still trying to fix.  Backing up to have a revert spot

--- a/components/eligibility.html
+++ b/components/eligibility.html
@@ -1,5 +1,5 @@
-    <div id="backgroundNew">
-        <div class="container">
+<div class="fit-content">
+    <div class="container">
             <div class="row">
                 <div class="col-md-12">
                     <section class="mdl-stepper">
@@ -7,9 +7,6 @@
                             <div class="mdl-cell mdl-cell--12-col">
                                 <!-- markup -->
                                 <ul id="lrt-stepper">
-                                    
-                                </ul>
-                                <ul id="loanDiscovery">
                                     
                                 </ul>
                             </div>
