--- a/components/discovery.html
+++ b/components/discovery.html
@@ -1,4 +1,4 @@
-    <div id="backgroundNew">
+    <div class="fit-content">
         <div class="container">
             <div class="row">
                 <div class="col-md-12">
@@ -7,9 +7,6 @@
                             <div class="mdl-cell mdl-cell--12-col">
                                 <!-- markup -->
                                 <ul id="lrt-stepper">
-                                    
-                                </ul>
-                                <ul id="loanDiscovery">
                                     
                                 </ul>
                             </div>
