Fixed quiz load
quiz loads as expected

--- a/components/header.html
+++ b/components/header.html
@@ -162,11 +162,11 @@
                         </div>
                     </div>
                     <div class="mm-top-section">
-                        <a class="mm-mobile-top-nav home" href="/">Home</a>                               
-                        <a class="mm-mobile-top-nav home" href="/index.html?guides">Guides</a>
-                        <a class="mm-mobile-top-nav home" href="/lrt.html">Eligibility Assessment</a>
-                        <a class="mm-mobile-top-nav home" href="/lrt.html?discovery">Loan Discovery</a>
-                        <a class="mm-mobile-top-nav home" href="/index.html?walkthrough">Form Support</a>
+                        <a class="mm-mobile-top-nav home" href="/" id="support" onclick="setContent('support');return false;">Home</a>                               
+                        <a class="mm-mobile-top-nav home" href="/" id="guides" onclick="setContent('guides');return false;">Guides</a>
+                        <a class="mm-mobile-top-nav home" href="/" id="eligibility" onclick="setContent('eligibility');return false;">Eligibility Assessment</a>
+                        <a class="mm-mobile-top-nav home" href="/" id="discovery" onclick="setContent('discovery');return false;">Loan Discovery</a>
+                        <a class="mm-mobile-top-nav home" href="/" id="support" onclick="setContent('support');return false;">Form Support</a>
                     </div>
                 </div>
                 <div class="mm-utility-nav">
