--- a/components/discovery.html
+++ b/components/discovery.html
@@ -15,11 +15,13 @@
                 </div>
             </div>
         </div>
-
     </div>
+
+    <script src="../js/wizardBuilder.js" type="text/javascript"></script>
 
     <script>
         (function() {
+            WizardBuilder.initialize("lrt-stepper", "../wizard-content.json");
             var questions = [];
             // Get a JSON array of steps from js/stateManager.js
             var steps = returnStepsJSON();
@@ -42,17 +44,10 @@
                 })
 
                 $.each(answeredQuestions, function(key, item) {
-                    let value = Math.max(...answeredQuestions);
-
-                    let id = parseInt(item);
-                    if( value < 36 ) { id = 36; }
-                    WizardBuilder.addStep("lrt-stepper", id);
-                    WizardBuilder.goToStep("lrt-stepper", id);
+                    if( item < 36 ) { return; }
+                    WizardBuilder.addStep("lrt-stepper", parseInt(item));
+                    WizardBuilder.goToStep("lrt-stepper", parseInt(item));
                 });
             });
         })();
-            $(document).ready(function () {
-                WizardBuilder.initialize("lrt-stepper", "../wizard-content.json");
-                gsap.registerPlugin(ScrollToPlugin);
-            });
     </script>
