--- a/components/eligibility.html
+++ b/components/eligibility.html
@@ -6,7 +6,7 @@
                         <div class="mdl-grid">
                             <div class="mdl-cell mdl-cell--12-col">
                                 <!-- markup -->
-                                <ul id="lrt-stepper">
+                                <ul id="wizzard-stepper">
                                     
                                 </ul>
                             </div>
@@ -18,8 +18,11 @@
 
     </div>
 
+    <script src="../js/wizardBuilder.js" type="text/javascript"></script>
+
     <script>
         (function() {
+            WizardBuilder.initialize("wizzard-stepper", "./wizard-content.json");
             var questions = [];
             // Get a JSON array of steps from js/stateManager.js
             var steps = returnStepsJSON();
@@ -43,23 +46,15 @@
                 
                 if (steps != "") {
                     answeredQuestions.forEach((item)=>{  
-                        let id = parseInt(item)
-
                         if(item>2){                        
-                            WizardBuilder.addStep("lrt-stepper", id);
-                            WizardBuilder.goToStep("lrt-stepper", id);
+                            WizardBuilder.addStep("wizzard-stepper", parseInt(item));
+                            WizardBuilder.goToStep("wizzard-stepper", parseInt(item));
                         }
-                    })    
+                    });
                 }
                 else {
                     setStep(1,"Start");
                 }
-                
             });
         })();
-        
-        $(document).ready(function () {
-            WizardBuilder.initialize("lrt-stepper", "../wizard-content.json");
-            gsap.registerPlugin(ScrollToPlugin);
-        });
     </script>
