--- a/components/footer.html
+++ b/components/footer.html
@@ -5,11 +5,11 @@
             <nav class="footer-site-nav" aria-labelledby="block-farmers-update-mainnavigation-2-menu" id="block-farmers-update-mainnavigation-2">
                 <h2 class="usa-sr-only" id="block-farmers-update-mainnavigation-2-menu">Main navigation - Footer</h2>
                 <ul>
-                    <li><a href="/" aria-label="Go to Home Page" class="is-active"><span>Home</span></a></li>
-                    <li><a href="/guides.html" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">Guides</a></li>
-                    <li><a href="/lrt.html" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">Eligibility Self-Assessment</a></li>
-                    <li><a id="loanDiscovery" href="/lrt.html?discovery" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">Loan Discovery</a></li>
-                    <li><a href="/walkthrough.html" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">Form Support</a></li>
+                    <li><a href="/" id="home" onclick="setContent('home');return" aria-label="Go to Home Page" class="is-active"><span>Home</span></a></li>
+                    <li><a href="/" id="guides" onclick="setContent('guides');return" class="page-link" data-label="/guides.html" aria-label="Go to Guides Page" data-category="Guides">Guides</a></li>
+                    <li><a href="/" id="eligibility" onclick="setContent('eligibility');return" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Readiness Tool" data-category="Readiness">Eligibility Self-Assessment</a></li>
+                    <li><a href="/" id="discovery" onclick="setContent('discovery');return" class="page-link" data-label="/lrt.html" aria-label="Go to the Loan Discovery Tool" data-category="Readiness">Loan Discovery</a></li>
+                    <li><a href="/" id="support" onclick="setContent('support');return" class="page-link" data-label="/walkthrough.html" aria-label="Go to Form Support Page" data-category="Loans">Form Support</a></li>
                 </ul>
             </nav>
             </div>
