--- a/components/quiz.html
+++ b/components/quiz.html
@@ -34,9 +34,35 @@ input[type=checkbox]:checked::after {
 }
 
     .quiz-container {
-      max-height: fit-content;
+        box-sizing: border-box;
+        display: grid;
+        grid-template-areas: "back questions"
+                             "next next";
+        grid-template-rows: auto 1fr;
+        grid-template-columns: 1fr 5fr;
     }
-    .quiz-title-text{
+        .quiz-back-container {
+            grid-area: back;
+            display:grid;
+        }
+
+        .quiz-back {
+            width: 2rem;
+            display:grid;
+        }
+
+        .quiz-questions-container {
+            grid-area: questions;
+        }
+
+        .quiz-next {
+            grid-area: next;
+            text-align: center;
+            margin: auto;
+            padding: 2rem;
+        }
+
+    .quiz-title-text {
         font-family: 'Public Sans';
         font-style: normal;
         font-weight: 700;
@@ -53,6 +79,7 @@ input[type=checkbox]:checked::after {
         line-height: 150%;
         color: #212121;
     }
+
     .quiz-multiselect-container {
         display: grid;
         grid-template-rows: auto auto;
@@ -61,61 +88,117 @@ input[type=checkbox]:checked::after {
     }
 
     .quiz-multiselect-card-container {
-        box-sizing: border-box;
         width: 100%;
         border-style: solid;
-        border-color: black;
+        border-color: #212121;
         border-width: 2px;
         padding: 2rem;
     }
 
+    .quiz-multiselect-card-title-text {
+        font-family: 'Public Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 18px;
+        line-height: 21px;
+        color: #212121;
+    }
+
+    .quiz-multiselect-card-paragraph-text {
+        font-family: 'Public Sans';
+        font-style: normal;
+        font-weight: 400;
+        font-size: 14px;
+        line-height: 16px;
+        color: #212121;
+    }
+
     .quiz-multiselect-card-check-container {
         color: antiquewhite;
-        float:right;
-        clear:both;
+        float: right;
+        clear: both;
     }
+
 </style>
 
 <div class="fit-content">
     <div class="container">
-        <div class="quiz-container" id="quiz-container">
-        
+        <div class="quiz-container">
+            <div class="quiz-back-container">
+                <div class="quiz-back" id="quiz-back">
+
+                </div>
+            </div> 
+            <div class="quiz-questions-container" id="quiz-questions-container"></div>
+            <div class="quiz-next" id="quiz-next"></div>
         </div>   
     </div>
 </div>
 
 <script>
+    let answeredQuestions = [];
+    let currentQuestion = 0;
+    let steps = [];
+
     (function() {
+        let startQuestion = 0;
+        _showQuestion(startQuestion);
+    })();
+
+    function _showQuestion(questionId) {
+        if(questionId === 0) {
+            $('#quiz-back').hide();
+        }
+        else $('#quiz-back').show();
+        currentQuestion = questionId;
         $.getJSON("../quiz.json", function(data) {
-            
+            steps = data;
             $.each(data["steps"], function(key, step) {
-                switch (step["type"]) {
-                    case 'information':
-                        // _createInformationCard(step);
-                        break;
-                    case 'multiselect':
-                        _createMultiselctCard(step);
-                        break;
-                    default:
-                        console.log(`not a valid type`);
+                if(step['id']===questionId){
+                    switch (step["type"]) {
+                        case 'information':
+                            _createInformationCard(step);
+                            break;
+                        case 'multiselect':
+                            _createMultiselctQuestion(step);
+                            break;
+                        default:
+                            console.log(`not a valid type`);
+                    };
                 }
             });
         });
-    })();
+        _createBackStepLink();
+    }
+
+    function _saveAndNext() {
+        _showQuestion(questionId);
+    }
 
     function _createInformationCard(step) {
-        $('#quiz-container').append(_createTitle(step['content']['title']));
-        $('#quiz-container').append(_createParagraphs(step['content']['paragraphs']));
-        $('#quiz-container').append(_createNextStepLink(step['nextStepId']));
+        let question = document.createElement("div");
+        question.classList.add("quiz-question");
+        question.append(_createTitle(step['content']['title']));
+        question.append(_createParagraphs(step['content']['paragraphs']));
+        question.append(_createNextStepLink(step['nextStepId']));
+        $('#quiz-questions-container').empty();
+        $('#quiz-questions-container').append(question);
     }
 
-    function _createMultiselctCard(step) {
-        $('#quiz-container').append(_createTitle(step['content']['title']));
-        $('#quiz-container').append(_createParagraphs(step['content']['paragraphs']));
-        $('#quiz-container').append(_createMultiselectItems(step['options']));
-        $('#quiz-container').append(_createNextStepLink(step['nextStepId']));
+    function _createMultiselctQuestion(step) {
+        let question = document.createElement("div");
+        question.classList.add("quiz-question");
+        question.append(_createTitle(step['content']['title']));
+        question.append(_createParagraphs(step['content']['paragraphs']));
+        question.append(_createMultiselectItems(step['options']));
+        question.append(_createNextStepLink(step['nextStepId']));
+        $('#quiz-questions-container').empty();
+        $('#quiz-questions-container').append(question);
     }
 
+    //////////////////
+    // Common Elements
+    //////////////////
     function _createTitle(title) {
         let titleDiv = document.createElement("div");
         titleDiv.classList.add("quiz-title-text");
@@ -155,31 +238,58 @@ input[type=checkbox]:checked::after {
     }
 
     function _createNextStepLink(nextStepId) {
-        return _convertStringToHTML("<div>" + "Save and continue " + nextStepId + "</div>")
+        let div = document.createElement('div');
+        div.classList.add("quiz-next");
+        let nextLink = document.createElement('a');
+        nextLink.onclick = function() { _showQuestion(nextStepId); };
+        nextLink.innerHTML = "Save and continue"
+        div.appendChild(nextLink);
+        return div;
     }
 
-    /////
-    // A collection of selections
+    function _createBackStepLink() {
+        let previoousLinkId = 0;
+        var image = document.createElement("img");
+        image.setAttribute("src", "./images/arrow-left.png");
+        image.setAttribute("height", "32");
+        image.setAttribute("width", "32");
+        image.setAttribute("alt", "Back Arrow");
+
+        let previoousLink = document.createElement('a');
+        previoousLink.onclick = function() { _showQuestion(previoousLinkId); };
+        previoousLink.appendChild(image);
+        $('#quiz-back').empty();
+        $('#quiz-back').append(previoousLink);
+    }
+
+    //////////////////
+    // Multi-selection
+    //////////////////
     function _createMultiselectItems (options) {
-        console.log(options)
         let gridDiv = document.createElement("div");
         gridDiv.classList.add("quiz-multiselect-container");
         for (var i = 0; i < options.length; i++) {
-            gridDiv.append(_createMultiselectCard(options[i]));
+            let cardDiv = document.createElement("div");
+            cardDiv.classList.add("quiz-multiselect-card-container");
+            cardDiv.append(_createMultiselctCardTitle(options[i]['title']));
+            cardDiv.append(_createParagraphs(options[i]['paragraphs']));
+            cardDiv.append(_convertStringToHTML("<div class='quiz-multiselect-card-check-container'><input type='checkbox'></div>"));
+
+            gridDiv.append(cardDiv);
         }
         return gridDiv;
     }
 
-    function _createMultiselectCard (option) {
-        console.log(option)
-        let gridDiv = document.createElement("div");
-        gridDiv.classList.add("quiz-multiselect-card-container");
-        gridDiv.append(_createTitle(option['title']));
-        gridDiv.append(_createParagraphs(option['paragraphs']));
-        gridDiv.append(_convertStringToHTML("<div class='quiz-multiselect-card-check-container'><input type='checkbox'></div>"));
-        return gridDiv;
+    function _createMultiselctCardTitle(title) {
+        let titleDiv = document.createElement("div");
+        titleDiv.classList.add("quiz-multiselect-card-title-text");
+        titleDiv.textContent = title;
+        return titleDiv;  
     }
-
+    
+    ///////////////////
+    // Helper Functions
+    ///////////////////  
     // Helper to convert string to HTML element
     function _convertStringToHTML(str) {
         const template =document.createElement("template");
